--- a/quart-app/templates/base.html
+++ b/quart-app/templates/base.html
@@ -16,7 +16,7 @@
     <link href="/static/css/styles.css" rel="stylesheet">
     
     <!-- Prism.js CSS for syntax highlighting -->
-    <link href="/cdn/npm/prismjs@1.29.0/themes/prism-tomorrow.css" rel="stylesheet">
+    <!-- <link href="/cdn/npm/prismjs@1.29.0/themes/prism-tomorrow.css" rel="stylesheet"> -->
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -83,8 +83,8 @@
     <script src="/cdn/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Prism.js for syntax highlighting -->
-    <script src="/cdn/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
-    <script src="/cdn/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+<!--     <script src="/cdn/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
+    <script src="/cdn/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script> -->
     
     <!-- Custom JS - Load in order -->
     <script src="/static/js/utils.js"></script>
